--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	</head>
 
 	<body>
+		<h1>arisJS</h1>
+		<div id="main"></div>
 		<script src="scripts/library/require.js" data-main="scripts/main"></script>
 	</body>
 </html>
