--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">arisJS</a>
 			</div>
+			<!-- Move into user status region -->
+			<button class="navbar-btn navbar-right btn btn-info">Logout</button>
 		</nav>
+
+		<!-- Breadcrumb/nav region ? -->
 
 		<div class="container">
 			<div id="main"></div>
