--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a class="navbar-brand" href="#">arisJS</a>
 			</div>
 			<!-- Move into user status region -->
-			<button class="navbar-btn navbar-right btn btn-info">Logout</button>
+			<!-- <button class="navbar-btn navbar-right btn btn-info">Logout</button> -->
 		</nav>
 
 		<!-- Breadcrumb/nav region ? -->
