Added google map to render locations and center on their coordinates

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 			<div id="main"></div>
 		</div>
 
+		<!-- google maps api. move to requireJS -->
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+
 		<script src="scripts/library/require.js" data-main="scripts/main"></script>
 	</body>
 </html>
