--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<!-- Bootstrap CDN CSS -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/arisjs.css">
 
 		<title>ARIS</title>
 	</head>
