--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<div id="list"></div>
-				<div class="col-xs-9">
+				<div class="col-xs-2">
+					<div id="list"></div>
+				</div>
+				<div class="col-xs-7">
 					<div id="main"></div>
 				</div>
 				<div class="col-xs-3">
