--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- Bootstrap CDN CSS -->
-		<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
+		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="styles/bootstrap.css">
 		<link rel="stylesheet" href="styles/arisjs.css">
 
@@ -28,7 +28,11 @@
 			</div>
 		</nav>
 
+
 		<!-- Breadcrumb/nav region ? -->
+
+
+		<!-- Application regions -->
 
 		<div class="container-fluid">
 			<div class="row">
@@ -43,6 +47,29 @@
 				</div>
 			</div>
 		</div>
+
+
+		<!-- Modal dialog region -->
+
+		<div class="modal fade" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
+		  <div class="modal-dialog modal-sm">
+			<div class="modal-content">
+
+				<!--<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title" id="modal-title">&nbsp;</h4>
+				</div>-->
+
+				<div class="modal-body" id="modal-body"></div>
+
+				<!--<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					<button type="button" class="btn btn-primary">Save</button>
+				</div>-->
+			</div>
+		  </div>
+		</div>
+
 
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
