Upgrade to bootstrap 3.1.1

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- Modal dialog region -->
 
 		<div class="modal fade" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
-		  <div class="modal-dialog modal-sm">
+		  <div class="modal-dialog">
 			<div class="modal-content">
 
 				<!--<div class="modal-header">
