Polishing new game logic and views, added logo

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 		<link rel="stylesheet" href="styles/bootstrap.css">
 		<link rel="stylesheet" href="styles/arisjs.css">
 
-		<title>ARIS</title>
+		<title>ARIS Editor</title>
 	</head>
 
 	<body>
 		<!-- TODO move this into a layout region -->
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">arisJS</a>
+				<a class="aris-logo" href="#">
+					<img src="images/Aris-Horizontal251.png">
+				</a>
 			</div>
 
 			<div id="navigation" class="navbar-header">
