--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="scripts/library/require.js" data-main="scripts/main"></script>
+		<script src="scripts/library/require.js"></script>
+		<script src="scripts/includes.js"></script>
+		<script>
+		  require(['main']);
+		</script>
 	</body>
 </html>
