--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 		  <div class="modal-dialog">
 			<div class="modal-content">
 
-				<!--<div class="modal-header">
+				<div class="modal-header" style="display: none">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title" id="modal-title">&nbsp;</h4>
-				</div>-->
+					<h4 class="modal-title" id="modal-title"></h4>
+				</div>
 
 				<div class="modal-body" id="modal-body"></div>
 
