Full height editor, trigger type text fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<!-- TODO move this into a layout region -->
-		<nav class="navbar navbar-default" role="navigation">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="navbar-header">
 				<a class="aris-logo" href="#">
 					<img src="images/Aris-Horizontal251.png">
@@ -36,16 +36,16 @@
 
 		<!-- Application regions -->
 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-2">
-					<div id="list"></div>
+		<div class="container-fluid full-height">
+			<div class="row full-height">
+				<div class="col-xs-2 full-height">
+					<div id="list" class="full-height"></div>
 				</div>
-				<div class="col-xs-7">
-					<div id="main"></div>
+				<div class="col-xs-7 full-height">
+					<div id="main" class="full-height"></div>
 				</div>
-				<div class="col-xs-3">
-					<div id="info"></div>
+				<div class="col-xs-3 full-height">
+					<div id="info" class="full-height"></div>
 				</div>
 			</div>
 		</div>
