--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
 				<a class="aris-logo" href="#">
 					<img src="images/Aris-Horizontal251.png">
 				</a>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#aris-collapse-menu">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 			</div>
 
-			<div id="navigation" class="navbar-header">
-			</div>
+			<div class="collapse navbar-collapse" id="aris-collapse-menu">
+				<div id="navigation" class="navbar-header">
+				</div>
 
-			<!-- Move into user status region -->
-			<div id="user" class="navbar-header navbar-right">
+				<!-- Move into user status region -->
+				<div id="user" class="navbar-header navbar-right">
+				</div>
 			</div>
 		</nav>
 
