crc stamp on js file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js"></script>
+		<script src="dist/aris.js?9626961d"></script>
 		<script>
 		  require(['main']);
 		</script>
