crc stamp on css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Bootstrap CDN CSS -->
 		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/arisjs.css">
+		<link rel="stylesheet" href="styles/arisjs.css?926159e1">
 
 		<title>ARIS Editor</title>
 	</head>
