Chooser fixes and timestamps

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 		<!-- Bootstrap CDN CSS -->
 		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/arisjs.css?926159e1">
+		<link rel="stylesheet" href="styles/arisjs.css?8f1e6bf78b10a644ac3530c362def6d1">
 
 		<title>ARIS Editor</title>
+
+		<!-- Built:
+			Tue Aug  5 11:27:38 CDT 2014
+		-->
 	</head>
 
 	<body>
@@ -87,7 +91,7 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js?9626961d"></script>
+		<script src="dist/aris.js?64fbc64c2ae754f0645dc21686e7ef40"></script>
 		<script>
 		  require(['main']);
 		</script>
