Saving/Loading status

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 		  </div>
 		</div>
 
+		<!-- Alert area -->
+		<div class="aris-alert alert alert-info" style="display: none">
+		</div>
 
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
