Default media, media inheritance, async loading events, retain field values on game objects. [Finishes #77656216 #80133406 #80769396 #80351452]

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<!-- Bootstrap CDN CSS -->
 		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/arisjs.css?42a78c9b1751aa2735fa07f3bf2d1bad1f9e8340873cd7828d76a7031db8c731">
+		<link rel="stylesheet" href="styles/arisjs.css?0a06765593a9104284c739d9c4f2792d4ba34fee42a9c267be2fd2e0e534589e">
 
 		<title>ARIS Editor</title>
 
 		<!-- Built:
-			Fri Oct 31 15:20:37 CDT 2014
+			Wed Nov 12 16:32:25 CST 2014
 		-->
 	</head>
 
@@ -91,7 +91,7 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js?d2e569541f071cbea9948efdf932f7a38aebbddcaa41d0f178410c49765e776c"></script>
+		<script src="dist/aris.js?6cc2cf69d070b0bfbca85039b96372cfe8c689a68ac8aedcd25f11817e4a0783"></script>
 		<script>
 		  require(['main']);
 		</script>
