Hide sidebars when shrunk.

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
 		<div class="container-fluid full-height">
 			<div class="row full-height">
-				<div class="col-xs-2 full-height">
+				<div class="col-sm-2 hidden-xs full-height">
 					<div id="list" class="full-height"></div>
 				</div>
-				<div class="col-xs-7 full-height">
+				<div class="col-xs-12 col-sm-7 full-height">
 					<div id="main" class="full-height"></div>
 				</div>
-				<div class="col-xs-3 full-height">
+				<div class="col-sm-3 hidden-xs full-height">
 					<div id="info" class="full-height"></div>
 				</div>
 			</div>
