Conversation fixes, Game object field rename/remove.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<!-- Bootstrap CDN CSS -->
 		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/arisjs.css?0a06765593a9104284c739d9c4f2792d4ba34fee42a9c267be2fd2e0e534589e">
+		<link rel="stylesheet" href="styles/arisjs.css?c5b0e95a96da71557d8d5acdc64e367de388bb6c985a6a8c53ff442105ba80ac">
 
 		<title>ARIS Editor</title>
 
 		<!-- Built:
-			Wed Nov 12 16:45:19 CST 2014
+			Wed Nov 19 10:26:01 CST 2014
 		-->
 	</head>
 
@@ -50,13 +50,13 @@
 
 		<div class="container-fluid full-height">
 			<div class="row full-height">
-				<div class="col-sm-2 hidden-xs full-height">
+				<div class="col-xs-2 full-height">
 					<div id="list" class="full-height"></div>
 				</div>
-				<div class="col-xs-12 col-sm-7 full-height">
+				<div class="col-xs-7 full-height">
 					<div id="main" class="full-height"></div>
 				</div>
-				<div class="col-sm-3 hidden-xs full-height">
+				<div class="col-xs-3 full-height">
 					<div id="info" class="full-height"></div>
 				</div>
 			</div>
@@ -91,7 +91,7 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js?6cc2cf69d070b0bfbca85039b96372cfe8c689a68ac8aedcd25f11817e4a0783"></script>
+		<script src="dist/aris.js?e1f74fdaf4ea142488edb24bc5ca8fb22b221394f71280a0f6a4410e7b4512da"></script>
 		<script>
 		  require(['main']);
 		</script>
