Favico and app launcher icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<link rel="stylesheet" href="styles/bootstrap.css">
 		<link rel="stylesheet" href="styles/arisjs.css">
 
+		<link rel="shortcut icon" href="images/arisfavico.png" />
+
+		<!-- iOS launcher shortcut -->
+		<link rel="apple-touch-icon-precomposed" href="images/arisappicon.png" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+
 		<title>ARIS Editor</title>
 	</head>
 
