Added quest interface selection.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<!-- Bootstrap CDN CSS -->
 		<!-- TODO failover require <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/arisjs.css?957e24c8c5e7fc8aeed4515580334f81683d7ad40c9cf10215aea266cd38a1ac">
+		<link rel="stylesheet" href="styles/arisjs.css?4a26e19ae43d491001e56a2adde6b3eb5902f22dbd261c21fdb9bcf69fe0515d">
 
 		<title>ARIS Editor</title>
 
 		<!-- Built:
-			Wed Feb 25 15:36:52 CST 2015
+			Mon Apr 27 12:08:31 CDT 2015
 		-->
 	</head>
 
@@ -91,7 +91,7 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js?b3a05d1db6ed13b3a6da40cab392cc86121a4b37a60d9f337d85509bf17d2e76"></script>
+		<script src="dist/aris.js?160f27743f9b13875429b485634653668f4beb2c135d86c7c9a505e1012f052e"></script>
 		<script>
 		  require(['main']);
 		</script>
