--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>ARIS Editor</title>
 
 		<!-- Built:
-			Tue May 12 13:13:38 CDT 2015
+			Mon May 18 13:46:24 CDT 2015
 		-->
 	</head>
 
@@ -91,9 +91,18 @@
 		<!-- google maps api. move to requireJS -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="dist/aris.js?4137836818355456bde5b036d3245f44ceb7d890a9b3cd24684f292fe17ce916"></script>
+		<script src="dist/aris.js?af26a9e2f2a20550e9f4b9fd90bba68605de78dbd6b314699a84e6d4f7122565"></script>
 		<script>
 		  require(['main']);
+		</script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-10031673-5', 'auto');
+			ga('send', 'pageview');
 		</script>
 	</body>
 </html>
