Date in title for support help

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>ARIS Editor</title>
 
 		<!-- Built:
-			Wed May 27 11:53:20 CDT 2015
+			Wed May 27 11:58:06 CDT 2015
 		-->
 	</head>
 
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="navbar-header">
 				<a class="aris-logo" href="#">
-					<img src="images/Aris-Horizontal251.png">
+					<img src="images/Aris-Horizontal251.png" title="ARIS Editor Build: Wed May 27 11:58:06 CDT 2015">
 				</a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#aris-collapse-menu">
 					<span class="sr-only">Toggle navigation</span>
